Fixed layout bug when shrinking browser

--- a/src/frontend/app/shared/components/drill-down/drill-down.component.scss
+++ b/src/frontend/app/shared/components/drill-down/drill-down.component.scss
@@ -65,6 +65,9 @@
     &-go-up {
       cursor: pointer;
     }
+    &-wrapper {
+      overflow: auto;
+    }
   }
   &__item {
     cursor: pointer;
